@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-24T01:53:49Z",
-  "count" : 2,
+  "timestamp" : "2025-08-24T12:39:57Z",
+  "count" : 1,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -1, +3 ],
-  "uniques" : 2,
+  "count_decinc" : [ -2, +3 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 3 ],
-  "uniques_decinc" : [ -1, +3 ]
+  "uniques_decinc" : [ -2, +3 ]
 }
