@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-08-24T01:53:49Z",
+  "timestamp" : "2025-08-24T12:39:57Z",
   "count_outdated" : 9418,
   "uniques_outdated" : 4583,
-  "count" : 9487,
-  "uniques" : 4642,
+  "count" : 9488,
+  "uniques" : 4643,
   "clones" : [
     {
       "timestamp": "2025-08-10T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
+      "count_decinc": [ 2, 3 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 1, 3 ]
+      "uniques_decinc": [ 2, 3 ]
     },
     {
       "timestamp": "2025-08-11T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 8,
       "uniques_minmax": [ 8, 8 ],
       "uniques_decinc": [ 0, 8 ]
+    },
+    {
+      "timestamp": "2025-08-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
