@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2025-08-10T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-08-11T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2025-08-23T00:00:00Z",
       "count": 9,
       "uniques": 8
+    },
+    {
+      "timestamp": "2025-08-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
