@@ -1,3 +1,12 @@
+2025-08-24T12:39:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17188803569 # 1180
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-24
+* notice: last 14d: unq all: 36 68
+* notice: prev accum: outdated-unq outdated-all / unq all: 4583 9418 / 4642 9487
+* notice: next accum: outdated-unq outdated-all / unq all: 4583 9418 / 4643 9488
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-08-10 2025-08-24]
+
 2025-08-24T01:53:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17182683857 # 1179
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-24
